// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConsultationPropositionStep /> renders correctly with plan 1`] = `
<Fragment>
  <div
    className="consultation-plan sticky col-md-3 col-sm-12"
    id="consultation-plan"
  >
    <ForwardRef(Relay(Connect(InjectIntl(ConsultationPlan))))
      consultation={
        Object {
          "$fragmentRefs": null,
        }
      }
    />
  </div>
  <div
    className="col-md-9"
    id="scroll-content"
  >
    <h2
      className="text-center"
    >
      El titro
    </h2>
    <div
      className="mb-30 project__step-dates text-center"
    >
      <div
        className="mr-15 d-ib"
      >
        <i
          className="cap cap-calendar-2-1"
        />
         
        <DatesInterval
          endAt="Thu Jul 25 2019"
          fullDay={true}
          startAt="Thu Jul 25 2019"
        />
      </div>
      <div
        className="mr-15 d-ib"
      >
        <i
          className="cap cap-hourglass-1"
        />
         
        <RemainingTime
          endAt="Thu Jul 25 2019"
        />
      </div>
    </div>
    <ForwardRef(Relay(StepInfos))
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "consultations": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "$fragmentRefs": null,
                },
              },
            ],
          },
          "id": "myStep",
          "status": "OPENED",
          "timeRange": Object {
            "endAt": "Thu Jul 25 2019",
            "startAt": "Thu Jul 25 2019",
          },
          "timeless": false,
          "title": "El titro",
        }
      }
    />
    <ForwardRef(Relay(SectionRecursiveList))
      consultation={
        Object {
          "$fragmentRefs": null,
        }
      }
      hideEmptySection={false}
    />
  </div>
</Fragment>
`;

exports[`<ConsultationPropositionStep /> renders correctly without plan 1`] = `
<Fragment>
  <div
    className="col-md-10 col-md-offset-1"
    id="scroll-content"
  >
    <h2
      className="text-center"
    >
      El titro
    </h2>
    <div
      className="mb-30 project__step-dates text-center"
    >
      <div
        className="mr-15 d-ib"
      >
        <i
          className="cap cap-calendar-2-1"
        />
         
        <DatesInterval
          endAt="Thu Jul 25 2019"
          fullDay={true}
          startAt="Thu Jul 25 2019"
        />
      </div>
      <div
        className="mr-15 d-ib"
      >
        <i
          className="cap cap-hourglass-1"
        />
         
        <RemainingTime
          endAt="Thu Jul 25 2019"
        />
      </div>
    </div>
    <ForwardRef(Relay(StepInfos))
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "consultations": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "$fragmentRefs": null,
                },
              },
            ],
          },
          "id": "myStep",
          "status": "OPENED",
          "timeRange": Object {
            "endAt": "Thu Jul 25 2019",
            "startAt": "Thu Jul 25 2019",
          },
          "timeless": false,
          "title": "El titro",
        }
      }
    />
    <ForwardRef(Relay(SectionRecursiveList))
      consultation={
        Object {
          "$fragmentRefs": null,
        }
      }
      hideEmptySection={false}
    />
  </div>
</Fragment>
`;
